# telegram_bot_django

./: .env.dist  .gitignore  Makefile  README.md  fixture.json  manage.py  pyproject.toml
core/: admin.py  apps.py  bot.py  models.py  user.py  views.py
core/migrations/: 0001_initial.py
gbot/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py
tests/testcore/: test_models.py
