[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Taras Nytiaha", email = "taras.nytiaha@gmail.com"},
]
dependencies = [
    "Django~=4.2",
    "uvicorn>=0.22.0",
    "aiogram~=3.0.0b7",
    "pytest-django>=4.5.2",
    "pytest-xdist>=3.3.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gbot.settings"